kubernetes/manifests/focalboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: focalboard-deployment
  namespace: focalb-demo
  labels:
    app: focalboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: focalboard
  template:
    metadata:
      labels:
        app: focalboard
    spec:
      enableServiceLinks: false
      containers:
        - name: focalboard
          image: heywoodlh/focalboard:a84bbb6 # official image for amd64 this one for multi=arch 
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: generated-config
              mountPath: /config
          command:
            - sh
            - -c
            - |
              ls -l /config
              cat /config/config.json
              cp /config/config.json /opt/focalboard/config.json
              cat /opt/focalboard/config.json
              /opt/focalboard/bin/focalboard-server
      volumes:
        - name: config-template
          configMap:
            name: focalboard-config
        - name: generated-config
          emptyDir: {}
