kubernetes/manifests/focalboard/focalboard-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: focalboard
  namespace: focalb-demo
spec:
  selector:
    app: focalboard
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
