kubernetes/manifests/focalboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: focalboard
  namespace: focalb-demo
spec:
  ingressClassName: traefik
  rules:
    - host: board.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: focalboard
                port:
                  number: 8000
